tests/ui/rfcs/rfc-2632-const-trait-impl/cross-crate.stocknc.stderr
error[E0015]: cannot call non-const fn `<cross_crate::NonConst as cross_crate::MyTrait>::func` in constant functions
  --> $DIR/cross-crate.rs:17:14
   |
LL |     NonConst.func();
   |              ^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   |
LL + #![feature(const_trait_impl)]
   |

error[E0015]: cannot call non-const fn `<cross_crate::Const as cross_crate::MyTrait>::func` in constant functions
  --> $DIR/cross-crate.rs:20:11
   |
LL |     Const.func();
   |           ^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   |
LL + #![feature(const_trait_impl)]
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
